<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Dentacare</string>
    <string name="btn_auth_signup">Sign up</string>
    <string name="btn_auth_login">Login</string>
    <string name="txt_auth_signup_login"><b><u>Login</u></b> or <b><u>Signup</u></b> using email</string>
    <string name="txt_login_forgot_password">Forgot password?</string>
    <string name="txt_login_or_connect_with">Or connect with</string>
    <string name="signup_txt_signup">Sign Up</string>
    <string name="signup_hnt_name">Name</string>
    <string name="signup_hnt_email">email</string>
    <string name="signup_hnt_password">password</string>
    <string name="signup_btn_create">Create</string>
    <string name="about_hdl_about">About Dentacare</string>
    <string name="about_hdl_heading">Form sustainable oral\nhealth habits</string>
    <string name="about_txt_about">Dentacoin is the first Blockchain solution created for the global dental industry. DCN is the custom ERC20 token, which serves all Dentacoin tools. Through using Dentacoin tools, you are contributing to our mission towards improving dental care and making it accessible for everyone worldwide.</string>
    <string name="about_url_dentacare">dentacare.dentacoin.com</string>
    <string name="signup_hnt_first_name">First name</string>
    <string name="signup_hnt_last_name">Last name</string>
    <string name="signup_hnt_captcha">enter code</string>
    <string name="error_txt_first_name_required">First name is required!</string>
    <string name="error_txt_first_name_too_short">First name is too short!</string>
    <string name="error_txt_first_name_too_long">First name is too long!</string>
    <string name="error_txt_last_name_too_long">Last name is too long!</string>
    <string name="error_txt_name_not_valid">Not a valid name!</string>
    <string name="error_txt_email_required">Email is required!</string>
    <string name="error_txt_email_not_valid">Please provide a valid email!</string>
    <string name="error_txt_password_short">Please provide a password with at least 8 characters</string>
    <string name="error_txt_failed_upload_avatar">Failed to upload avatar!</string>
    <string name="error_txt_something_went_wrong">Something went wrong..</string>
    <string name="error_txt_offline">You\'re offline. Please connect to the internet and try again.</string>
    <string name="error_txt_json">Error parsing json response!</string>
    <string name="signup_txt_permission_avatar">You need to grant us \"Camera\" permissions in order to setup an avatar</string>
    <string name="txt_settings">Settings</string>
    <string name="error_txt_error_picking_image">An error occurred while trying to retrieve the picture!</string>
    <string name="reset_password_hdl_forgot">Forgot your password?</string>
    <string name="reset_password_txt_send">We will send you an email with instructions on how to reset your password</string>
    <string name="reset_password_txt_success">Successfully sent reset request, you will receive an email shortly</string>
    <string name="txt_send">Send</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_loading">Loading...</string>
    <string name="btn_agree">Agree</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="drawer_nav_home">Home</string>
    <string name="drawer_nav_goals">Achievements</string>
    <string name="drawer_nav_statistics">Statistics</string>
    <string name="drawer_nav_dentacoin">Dentacoin</string>
    <string name="drawer_nav_emergency">Emergency</string>
    <string name="drawer_nav_oral_health">Oral Health</string>
    <string name="drawer_nav_settings">Settings</string>
    <string name="drawer_nav_about">About</string>
    <string name="drawer_nav_signout">Sign out</string>
    <string name="emergency_hdl_describe">Describe your case</string>
    <string name="emergency_hnt_write_message">Write message</string>
    <string name="emergency_hnt_phone">Phone number</string>
    <string name="dashboard_btn_daily">daily</string>
    <string name="dashboard_btn_weekly">weekly</string>
    <string name="dashboard_btn_monthly">monthly</string>
    <string name="dashboard_lbl_rinse_statistics">Rinse Statistics</string>
    <string name="dashboard_lbl_floss_statistics">Floss Statistics</string>
    <string name="dashboard_lbl_brush_statistics">Brush Statistics</string>
    <string name="dashboard_lbl_average_time">average time</string>
    <string name="dashboard_lbl_time_left">time left</string>
    <string name="dashboard_lbl_times_rinsed">times rinsed</string>
    <string name="dashboard_lbl_times_flossed">times flossed</string>
    <string name="dashboard_lbl_times_brushed">times brushed</string>
    <string name="emergency_lbl_phone">You can add a phone to the message so we can contact you faster</string>
    <string name="child_hnt_name">Name</string>
    <string name="child_hnt_birthyear">Birth year</string>
    <string name="child_hdl_create">Create a new Child Account</string>
    <string name="child_txt_create_account">Create a new Child Account associated with yours so you can easily track your child\'s dental routines!</string>
    <string name="child_btn_create">Create</string>
    <string name="btn_child_use_account">Use account</string>
    <string name="txt_done">Done</string>
    <string name="child_hdl_account_created">Child Account created!</string>
    <string name="child_txt_account_created">You can enable Child Mode and start using this account by pressing \"Use Account\". You can also login with your account from another device and enable Child Mode by navigating to \"Family &amp; Friends\" and selecting the profile you\'d like to use.</string>
</resources>