<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_drawer_top">
        <item
            android:id="@+id/drawer_nav_home"
            android:title="@string/drawer_nav_home"
            android:icon="@drawable/nav_home"/>
        <item
            android:id="@+id/drawer_nav_dentacoin"
            android:title="@string/drawer_nav_dentacoin"
            android:icon="@drawable/nav_collect"/>
        <item
            android:id="@+id/drawer_nav_goals"
            android:title="@string/drawer_nav_goals"
            android:icon="@drawable/nav_goals"/>
        <item
            android:id="@+id/drawer_nav_statistics"
            android:title="@string/drawer_nav_statistics"
            android:icon="@drawable/nav_statistics"/>
        <item
            android:id="@+id/drawer_nav_oral_health"
            android:title="@string/drawer_nav_oral_health"
            android:icon="@drawable/nav_oral_health"/>
        <item
            android:id="@+id/drawer_nav_emergency"
            android:title="@string/drawer_nav_emergency"
            android:icon="@drawable/nav_emergency"/>
        <item
            android:id="@+id/drawer_nav_about"
            android:title="@string/drawer_nav_about"/>
    </group>
    <group
        android:id="@+id/menu_drawer_bottom">
        <item
            android:id="@+id/drawer_nav_settings"
            android:title="@string/drawer_nav_settings"
            android:icon="@drawable/nav_settings"/>
        <item
            android:id="@+id/drawer_nav_signout"
            android:title="@string/drawer_nav_signout"
            android:icon="@drawable/nav_logout"/>
    </group>
</menu>