<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_child_create"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_face_white_48"
                android:layout_gravity="center_horizontal"
                android:tint="@color/charcoalGrey"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"/>
            <com.dentacoin.dentacare.widgets.DCTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_hdl_create"
                android:textAlignment="center"
                android:textSize="21sp"
                android:padding="8dp"
                android:textColor="@color/charcoalGrey"/>
            <com.dentacoin.dentacare.widgets.DCTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/child_txt_create_account"
                android:textColor="@color/charcoalGrey"/>
            <com.dentacoin.dentacare.widgets.DCTextInputLayout
                android:id="@+id/til_child_name"
                android:theme="@style/DCTextInputLayout.Collect"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.dentacoin.dentacare.widgets.DCTextInputEditText
                    android:id="@+id/tiet_child_name"
                    style="@style/DCEditText.Collect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:capitalize="words"
                    android:hint="@string/child_hnt_name"
                    android:singleLine="true"
                    android:textColor="@color/charcoalGrey"/>
            </com.dentacoin.dentacare.widgets.DCTextInputLayout>
            <com.dentacoin.dentacare.widgets.DCTextInputLayout
                android:id="@+id/til_child_birthyear"
                android:theme="@style/DCTextInputLayout.Collect"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.dentacoin.dentacare.widgets.DCEditText
                    android:id="@+id/et_child_birthyear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/DCEditText.Collect"
                    android:hint="@string/child_hnt_birthyear"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/charcoalGrey"
                    android:editable="false"/>
            </com.dentacoin.dentacare.widgets.DCTextInputLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_child_created"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_face_white_48"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:tint="@color/charcoalGrey"/>
            <com.dentacoin.dentacare.widgets.DCTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_hdl_account_created"
                android:textColor="@color/charcoalGrey"
                android:textSize="21sp"
                android:textAlignment="center"
                android:paddingBottom="16dp"/>
            <com.dentacoin.dentacare.widgets.DCTextView
                android:id="@+id/tv_child_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:textAlignment="center"
                android:textColor="@color/charcoalGrey"
                android:textSize="21sp"/>
            <com.dentacoin.dentacare.widgets.DCTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textAlignment="center"
                android:text="@string/child_txt_account_created"
                android:textColor="@color/charcoalGrey"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.dentacoin.dentacare.widgets.DCButton
            android:id="@+id/btn_child_create"
            style="@style/DCButton.Default"
            android:layout_gravity="center_horizontal"
            android:text="@string/child_btn_create"
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_margin="8dp"/>
        <com.dentacoin.dentacare.widgets.DCButton
            android:id="@+id/btn_child_use_account"
            style="@style/DCButton.Default"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_child_use_account"
            android:layout_margin="8dp"/>
        <com.dentacoin.dentacare.widgets.DCButton
            android:id="@+id/btn_child_done"
            style="@style/DCButton.Default"
            android:text="@string/txt_done"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"/>
    </LinearLayout>
</LinearLayout>